tests/compile-fail/compile_fail__type_error__stackless__sine_out.snap
---
source: tests/compile-fail.rs
expression: stderr
---
error: type error
   ┌─ <input>:27:15
   │
27 │       int x = sin(F0);  
   │           ----^^^^^^^
   │           │   │
   │           │   a float
   │           same types required due to this
   │           an integer


